# inspect-function

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-all.txt  requirements.txt
.github/workflows/: ci.yml
inspect_function/: __init__.py
inspect_function/utils/: get_openapi_type.py  load_object_from_annotation.py
inspect_funtion/: __init__.py
tests/: test_function_types.py  test_inspect_function.py  test_inspect_parameters.py  test_load_object_from_annotation.py
