[project]
authors = [{ name = "Allen Chou", email = "f1470891079@gmail.com" }]
dependencies = ["pydantic (>=2,<3)", "pydantic-settings (>=2,<3)"]
description = ""
name = "inspect-funtion"
readme = "README.md"
requires-python = ">=3.11,<4"
version = "0.1.0"

[tool.poetry.extras]
all = []

[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "*" }
faker = "*"
isort = "*"
poetry-plugin-export = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-env = "*"
pytest-xdist = "*"
setuptools = ">=69"

[tool.isort]
profile = "black"

[tool.flake8]
ignore = ["E203", "E704", "W503"]
max-line-length = 88

[tool.pytest.ini_options]
addopts = "--cov=inspect_function --cov-report=term-missing"
asyncio_mode = "auto"
env = ["ENVIRONMENT=test", "PING_OPENAI=false", "PYTEST_IS_RUNNING=true"]
filterwarnings = ["ignore::DeprecationWarning"]
testpaths = ["tests"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
